Implemented password forgot, reset, ai, update user roles
